base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-example
  labels:
    openshift-example: "yes"
spec:
  selector:
    app: quarkus-example
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
